--- a/src/output.css
+++ b/src/output.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -568,12 +572,20 @@ video {
   bottom: 0px;
 }
 
+.bottom-20 {
+  bottom: 5rem;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
 
 .bottom-\[85px\] {
   bottom: 85px;
+}
+
+.left-12 {
+  left: 3rem;
 }
 
 .right-0 {
@@ -588,20 +600,12 @@ video {
   top: 0px;
 }
 
+.top-14 {
+  top: 3.5rem;
+}
+
 .top-2 {
   top: 0.5rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-14 {
-  left: 3.5rem;
-}
-
-.left-12 {
-  left: 3rem;
 }
 
 .z-10 {
@@ -657,6 +661,10 @@ video {
   margin-left: 0.75rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -671,10 +679,6 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
 }
 
 .block {
@@ -699,6 +703,10 @@ video {
 
 .h-12 {
   height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
 }
 
 .h-2 {
@@ -754,10 +762,6 @@ video {
   height: 100vh;
 }
 
-.h-14 {
-  height: 3.5rem;
-}
-
 .max-h-\[150px\] {
   max-height: 150px;
 }
@@ -806,10 +810,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-14 {
-  width: 3.5rem;
 }
 
 @keyframes spin {
@@ -1041,10 +1041,6 @@ video {
   --tw-bg-opacity: 0.7;
 }
 
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-
 .fill-secondary {
   fill: #2e333d;
 }
@@ -1129,6 +1125,10 @@ video {
   padding-left: 0px;
 }
 
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1147,6 +1147,10 @@ video {
 
 .pr-1 {
   padding-right: 0.25rem;
+}
+
+.pr-11 {
+  padding-right: 2.75rem;
 }
 
 .pr-2 {
@@ -1171,26 +1175,6 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
-}
-
-.pr-11 {
-  padding-right: 2.75rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
 }
 
 .text-lg {
@@ -1378,12 +1362,32 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+
   .md\:relative {
     position: relative;
   }
 
+  .md\:sticky {
+    position: sticky;
+  }
+
   .md\:left-0 {
     left: 0px;
+  }
+
+  .md\:top-16 {
+    top: 4rem;
+  }
+
+  .md\:bottom-20 {
+    bottom: 5rem;
+  }
+
+  .md\:bottom-24 {
+    bottom: 6rem;
   }
 
   .md\:block {
@@ -1409,6 +1413,11 @@ video {
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .md\:pl-5 {
