--- a/src/input.css
+++ b/src/input.css
@@ -39,3 +39,7 @@
 .scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+
+.chat-pattern {
+  background-image: url("./assets/chatBG.png");
+}
