--- a/src/output.css
+++ b/src/output.css
@@ -745,6 +745,10 @@ video {
   height: 2.25rem;
 }
 
+.h-\[90\%\] {
+  height: 90%;
+}
+
 .h-\[calc\(100\%-88px\)\] {
   height: calc(100% - 88px);
 }
@@ -794,6 +798,14 @@ video {
   width: 1.5rem;
 }
 
+.w-\[3px\] {
+  width: 3px;
+}
+
+.w-\[7px\] {
+  width: 7px;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -812,6 +824,16 @@ video {
   width: 100vw;
 }
 
+.rotate-\[-45deg\] {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[135deg\] {
+  --tw-rotate: 135deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -820,6 +842,10 @@ video {
 
 .animate-spin {
   animation: spin 1s linear infinite;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .cursor-pointer {
@@ -882,6 +908,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -914,6 +944,10 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -995,6 +1029,11 @@ video {
   background-color: rgb(0 102 84 / var(--tw-bg-opacity));
 }
 
+.bg-danger {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 51 48 / var(--tw-bg-opacity));
+}
+
 .bg-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(33 35 40 / var(--tw-bg-opacity));
@@ -1012,6 +1051,11 @@ video {
 
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-300 {
@@ -1048,14 +1092,6 @@ video {
 
 .bg-opacity-70 {
   --tw-bg-opacity: 0.7;
-}
-
-.bg-opacity-30 {
-  --tw-bg-opacity: 0.3;
-}
-
-.bg-opacity-90 {
-  --tw-bg-opacity: 0.9;
 }
 
 .bg-opacity-80 {
@@ -1386,6 +1422,11 @@ video {
   cursor: pointer;
 }
 
+.hover\:bg-\[\#d12624\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 38 36 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-dark:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 35 40 / var(--tw-bg-opacity));
@@ -1394,6 +1435,11 @@ video {
 .hover\:bg-secondary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 51 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-zinc-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-50:hover {
