--- a/src/output.css
+++ b/src/output.css
@@ -584,6 +584,10 @@ video {
   left: 3rem;
 }
 
+.left-\[50\%\] {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -600,6 +604,34 @@ video {
   top: 0.5rem;
 }
 
+.right-\[20px\] {
+  right: 20px;
+}
+
+.bottom-\[20px\] {
+  bottom: 20px;
+}
+
+.bottom-\[70px\] {
+  bottom: 70px;
+}
+
+.bottom-\[80px\] {
+  bottom: 80px;
+}
+
+.bottom-\[120px\] {
+  bottom: 120px;
+}
+
+.bottom-\[105px\] {
+  bottom: 105px;
+}
+
+.right-\[30px\] {
+  right: 30px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -610,6 +642,10 @@ video {
 
 .m-3 {
   margin: 0.75rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-10 {
@@ -635,6 +671,11 @@ video {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-1 {
@@ -679,6 +720,34 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mb-\[200px\] {
+  margin-bottom: 200px;
+}
+
+.mb-\[100px\] {
+  margin-bottom: 100px;
+}
+
+.mb-\[60px\] {
+  margin-bottom: 60px;
+}
+
+.mb-\[40px\] {
+  margin-bottom: 40px;
+}
+
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -757,6 +826,10 @@ video {
   height: 2.25rem;
 }
 
+.h-\[28\%\] {
+  height: 28%;
+}
+
 .h-\[30\%\] {
   height: 30%;
 }
@@ -780,6 +853,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[15\%\] {
+  height: 15%;
+}
+
+.h-\[18\%\] {
+  height: 18%;
 }
 
 .max-h-\[150px\] {
@@ -820,6 +901,10 @@ video {
 
 .w-\[7px\] {
   width: 7px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-fit {
@@ -1236,8 +1321,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pb-\[30px\] {
-  padding-bottom: 30px;
+.pb-\[50px\] {
+  padding-bottom: 50px;
 }
 
 .pl-0 {
@@ -1302,6 +1387,10 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
 }
 
 .text-center {
@@ -1424,8 +1513,16 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .duration-150 {
   transition-duration: 150ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
 }
 
 .ease-in-out {
@@ -1545,6 +1642,14 @@ video {
 
   .md\:left-0 {
     left: 0px;
+  }
+
+  .md\:bottom-\[20px\] {
+    bottom: 20px;
+  }
+
+  .md\:m-3 {
+    margin: 0.75rem;
   }
 
   .md\:block {
